--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
